@startuml
hide circle
skinparam classAttributeIconSize 0

package command {
    class ListIncomeCommand {
        # CommandType commandType
        # String outputMessage
        - <u>logger: Logger</u>
        - <u>EMPTY_INCOME_LIST_MESSAGE: String</u>
        - <u>savingGoal: double</u>
        + ListIncomeCommand()
        + <u>setSavingGoal(amount: double)</u>
        + <u>getSavingGoal(): double</u>
        - calculateSavingProgress(totalIncome: double, totalExpenses: double): double
        + execute(List<Income> incomes, ExpenseList expenseList)
    }
    abstract class "{abstract} \n Command" {
        + CommandType: commandType
        + Command()
    }
}

package budgetflow.expense {
    class ExpenseList
}

package budgetflow.income {
    class Income
}

class Logger



 "{abstract} \n Command" <|-- ListIncomeCommand
ListIncomeCommand ..> Income : uses
ListIncomeCommand ..> ExpenseList : uses
ListIncomeCommand ..> Logger : uses
@enduml